--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@vue/composition-api": "^1.0.0-rc.11",
+    "@vuelidate/core": "^2.0.0-alpha.19",
+    "@vuelidate/validators": "^2.0.0-alpha.17",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3"
   },
